dnl =======================================================
dnl FILE: ./admin/configure.in.min
dnl =======================================================

dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
dnl    Boston, MA 02110-1301, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(piklab, 0.14.5) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3)
AC_PATH_KDE
dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

#MIN_CONFIG(3)

dnl PACKAGE set before

dnl CXXFLAGS="$NOOPT_CXXFLAGS" dnl __kdevelop[noopt]__
dnl CFLAGS="$NOOPT_CFLAGS" dnl __kdevelop[noopt]__
dnl CXXFLAGS="$CXXFLAGS $USE_EXCEPTIONS" dnl __kdevelop[exc]__

dnl KDE_NEED_FLEX dnl __kdevelop__
dnl AC_PROG_YACC dnl __kdevelop__

# --------------------------------------------------------------------------
# check os
case "${host_os}" in
       *linux* ) OSDIR=linux ;;
       *bsd*   ) OSDIR=bsd   LDFLAGS="$LDFLAGS $LIBPTHREAD";;
       *       ) OSDIR=null  ;;
esac
AM_CONDITIONAL(BSD, test x$OSDIR = xbsd)
AM_CONDITIONAL(LINUX, test x$OSDIR = xlinux)
AM_CONDITIONAL(NULL, test x$OSDIR = xnull)
AC_C_BIGENDIAN

# --------------------------------------------------------------------------
# check for parport header (linux)
AC_CACHE_CHECK([for parport header/ppdev.h], ac_cv_c_ppdev,
 AC_TRY_COMPILE(
   [#include <linux/ppdev.h>],
   [ioctl (1,PPCLAIM,0)],
   [ac_cv_c_ppdev="yes"],
   [ac_cv_c_ppdev="no"])
 )
if test "$ac_cv_c_ppdev" = "yes"
then
   AC_DEFINE(HAVE_PPDEV, 1, [Define if we can use ppdev for parallel port access])
fi

# check for ppbus header (FreeBSD)
AC_CACHE_CHECK([for ppbus header/ppi.h], ac_cv_c_ppbus,
 AC_TRY_COMPILE(
   [#include <dev/ppbus/ppi.h>],
   [ioctl (1,PPIGCTRL,0)],
   [ac_cv_c_ppbus="yes"],
   [ac_cv_c_ppbus="no"])
 )
if test "$ac_cv_c_ppbus" = "yes"
then
   AC_DEFINE(HAVE_PPBUS, 1, [Define if we can use ppbus for parallel port access])
fi

# ----------------------------------------------------------------------------
# check for libusb
have_libusb=no
AC_ARG_ENABLE(libusb, AC_HELP_STRING([--disable-libusb],[do not use libusb]),
              [ try_libusb="${enableval}" ], [ try_libusb=yes ] )
if test "x$try_libusb" != xno ; then
  AC_CHECK_PROG([LIBUSBCONFIG], [libusb-config], [yes])
  if test "$LIBUSBCONFIG" = "yes" ; then
    LIBUSB_CFLAGS="$LIBUSB_CFLAGS `libusb-config --cflags`"
    LIBUSB_LIBS="$LIBUSB_LIBS `libusb-config --libs`"
    LIBUSB_VERSION="`libusb-config --version`"
  else
    AC_MSG_WARN([libusb-config not found.])
  fi
  saved_CPPFLAGS="$CPPFLAGS"
  saved_LIBS="$LIBS"
  CPPFLAGS="$CPPFLAGS $LIBUSB_CFLAGS"
  LIBS="$LDFLAGS $LIBUSB_LIBS"
  AC_CHECK_HEADERS(usb.h, [],
    [ AC_MSG_ERROR([usb.h not found, use ./configure LIBUSB_CFLAGS=...]) ])
  AC_MSG_CHECKING([for usb_init])
  AC_TRY_LINK_FUNC(usb_init, [ AC_MSG_RESULT([yes]) ],
    [ AC_MSG_ERROR([libusb not found, use ./configure LIBUSB_LIBS=...]) ])
  CPPFLAGS="$saved_CPPFLAGS"
  LIBS="$saved_LIBS"
  have_libusb=yes
fi
AC_SUBST(LIBUSB_CFLAGS)
AC_SUBST(LIBUSB_LIBS)
if test "$have_libusb" = "yes"
then
  AC_DEFINE(HAVE_USB, 1, [Define if libusb is available])
  AC_DEFINE_UNQUOTED(LIBUSB_VERSION, "$LIBUSB_VERSION", [libusb version])
fi

# ----------------------------------------------------------------------------
# check which libcurses
AC_CHECK_LIB(curses, main, CURSESLIB="-lcurses",
  [AC_CHECK_LIB(ncurses, main, CURSESLIB="-lncurses")]
)

# ----------------------------------------------------------------------------
# check for readline
have_libreadline=no
AC_ARG_ENABLE(libreadline, AC_HELP_STRING([--disable-libreadline],[do not use libreadline]),
              [ try_libreadline="${enableval}" ], [ try_libreadline=yes ] )
if test "x$try_libreadline" != xno ; then
  LIBREADLINE_LIBS="-lhistory -lreadline $CURSESLIB"
  AC_CHECK_HEADER(readline/readline.h, HAVE_READLINE=true, [ AC_MSG_WARN([readline/readline.h not found]) ])
  if test x${HAVE_READLINE} = xtrue ; then
    saved_CPPFLAGS="$CPPFLAGS"
    saved_LIBS="$LIBS"
    LIBS="$LDFLAGS $LIBREADLINE_LIBS"
    AC_MSG_CHECKING([for rl_initialize])
    AC_TRY_LINK_FUNC(rl_initialize, [
      AC_MSG_RESULT([yes])
      AC_MSG_CHECKING([for using_history])
      AC_TRY_LINK_FUNC(using_history, [
        have_libreadline=yes
        AC_MSG_RESULT([yes])
      ], [ AC_MSG_WARN([libhistory not found]) ])
    ], [ AC_MSG_WARN([libreadline not found]) ])
    CPPFLAGS="$saved_CPPFLAGS"
    LIBS="$saved_LIBS"
  fi
fi
AC_SUBST(LIBREADLINE_LIBS)
if test "$have_libreadline" = "yes"
then
  AC_DEFINE(HAVE_READLINE, 1, [Define if libreadline header is present.])
fi
KDE_CREATE_SUBDIRSLIST
AM_CONDITIONAL(doc_SUBDIR_included, test "x$doc_SUBDIR_included" = xyes)
AM_CONDITIONAL(man_SUBDIR_included, test "x$man_SUBDIR_included" = xyes)
AM_CONDITIONAL(po_SUBDIR_included, test "x$po_SUBDIR_included" = xyes)
AM_CONDITIONAL(src_SUBDIR_included, test "x$src_SUBDIR_included" = xyes)
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ doc/Makefile ])
AC_CONFIG_FILES([ man/Makefile ])
AC_CONFIG_FILES([ po/Makefile ])
AC_CONFIG_FILES([ src/Makefile ])
AC_CONFIG_FILES([ src/coff/Makefile ])
AC_CONFIG_FILES([ src/coff/base/Makefile ])
AC_CONFIG_FILES([ src/coff/xml/Makefile ])
AC_CONFIG_FILES([ src/common/Makefile ])
AC_CONFIG_FILES([ src/common/common/Makefile ])
AC_CONFIG_FILES([ src/common/global/Makefile ])
AC_CONFIG_FILES([ src/common/global/svn_revision/Makefile ])
AC_CONFIG_FILES([ src/common/gui/Makefile ])
AC_CONFIG_FILES([ src/common/port/Makefile ])
AC_CONFIG_FILES([ src/data/Makefile ])
AC_CONFIG_FILES([ src/data/app_data/Makefile ])
AC_CONFIG_FILES([ src/data/likeback/Makefile ])
AC_CONFIG_FILES([ src/devices/Makefile ])
AC_CONFIG_FILES([ src/devices/base/Makefile ])
AC_CONFIG_FILES([ src/devices/gui/Makefile ])
AC_CONFIG_FILES([ src/devices/list/Makefile ])
AC_CONFIG_FILES([ src/devices/mem24/Makefile ])
AC_CONFIG_FILES([ src/devices/mem24/base/Makefile ])
AC_CONFIG_FILES([ src/devices/mem24/gui/Makefile ])
AC_CONFIG_FILES([ src/devices/mem24/mem24/Makefile ])
AC_CONFIG_FILES([ src/devices/mem24/xml/Makefile ])
AC_CONFIG_FILES([ src/devices/mem24/xml_data/Makefile ])
AC_CONFIG_FILES([ src/devices/pic/Makefile ])
AC_CONFIG_FILES([ src/devices/pic/base/Makefile ])
AC_CONFIG_FILES([ src/devices/pic/gui/Makefile ])
AC_CONFIG_FILES([ src/devices/pic/pic/Makefile ])
AC_CONFIG_FILES([ src/devices/pic/xml/Makefile ])
AC_CONFIG_FILES([ src/devices/pic/xml_data/Makefile ])
AC_CONFIG_FILES([ src/libcli/Makefile ])
AC_CONFIG_FILES([ src/libgui/Makefile ])
AC_CONFIG_FILES([ src/piklab/Makefile ])
AC_CONFIG_FILES([ src/piklab-hex/Makefile ])
AC_CONFIG_FILES([ src/piklab-prog/Makefile ])
AC_CONFIG_FILES([ src/progs/Makefile ])
AC_CONFIG_FILES([ src/progs/base/Makefile ])
AC_CONFIG_FILES([ src/progs/bootloader/Makefile ])
AC_CONFIG_FILES([ src/progs/bootloader/base/Makefile ])
AC_CONFIG_FILES([ src/progs/bootloader/bootloader_data/Makefile ])
AC_CONFIG_FILES([ src/progs/bootloader/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/bootloader/xml/Makefile ])
AC_CONFIG_FILES([ src/progs/direct/Makefile ])
AC_CONFIG_FILES([ src/progs/direct/base/Makefile ])
AC_CONFIG_FILES([ src/progs/direct/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/direct/xml/Makefile ])
AC_CONFIG_FILES([ src/progs/gpsim/Makefile ])
AC_CONFIG_FILES([ src/progs/gpsim/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/icd1/Makefile ])
AC_CONFIG_FILES([ src/progs/icd1/base/Makefile ])
AC_CONFIG_FILES([ src/progs/icd1/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/icd1/xml/Makefile ])
AC_CONFIG_FILES([ src/progs/icd2/Makefile ])
AC_CONFIG_FILES([ src/progs/icd2/base/Makefile ])
AC_CONFIG_FILES([ src/progs/icd2/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/icd2/icd2_data/Makefile ])
AC_CONFIG_FILES([ src/progs/icd2/xml/Makefile ])
AC_CONFIG_FILES([ src/progs/list/Makefile ])
AC_CONFIG_FILES([ src/progs/manager/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit1/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit1/base/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit1/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit1/xml/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit2/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit2/base/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit2/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit2/xml/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit2v2/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit2v2/base/Makefile ])
AC_CONFIG_FILES([ src/progs/pickit2v2/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/psp/Makefile ])
AC_CONFIG_FILES([ src/progs/psp/base/Makefile ])
AC_CONFIG_FILES([ src/progs/psp/gui/Makefile ])
AC_CONFIG_FILES([ src/progs/psp/xml/Makefile ])
AC_CONFIG_FILES([ src/tools/Makefile ])
AC_CONFIG_FILES([ src/tools/base/Makefile ])
AC_CONFIG_FILES([ src/tools/boost/Makefile ])
AC_CONFIG_FILES([ src/tools/c18/Makefile ])
AC_CONFIG_FILES([ src/tools/cc5x/Makefile ])
AC_CONFIG_FILES([ src/tools/ccsc/Makefile ])
AC_CONFIG_FILES([ src/tools/gputils/Makefile ])
AC_CONFIG_FILES([ src/tools/jal/Makefile ])
AC_CONFIG_FILES([ src/tools/jalv2/Makefile ])
AC_CONFIG_FILES([ src/tools/list/Makefile ])
AC_CONFIG_FILES([ src/tools/mpc/Makefile ])
AC_CONFIG_FILES([ src/tools/pic30/Makefile ])
AC_CONFIG_FILES([ src/tools/picc/Makefile ])
AC_CONFIG_FILES([ src/tools/sdcc/Makefile ])
AC_CONFIG_FILES([ src/xml_to_data/Makefile ])
AC_OUTPUT
# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test x$GXX = "xyes" -a x$kde_have_gcc_visibility = "xyes" -a x$kde_cv_val_qt_gcc_visibility_patched = "xno"; then
  echo ""
  echo "Your GCC supports symbol visibility, but the patch for Qt supporting visibility"
  echo "was not included. Therefore, GCC symbol visibility support remains disabled."
  echo ""
  echo "For better performance, consider including the Qt visibility supporting patch"
  echo "located at:"
  echo ""
  echo "http://bugs.kde.org/show_bug.cgi?id=109386"
  echo ""
  echo "and recompile all of Qt and KDE. Note, this is entirely optional and"
  echo "everything will continue to work just fine without it."
  echo ""
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
