#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(puf, 1.1, vasco-project@lists.gforge.enseeiht.fr)
AM_INIT_AUTOMAKE([no-dependencies no-exeext dist-bzip2])
AC_CONFIG_SRCDIR([bootloader/boot_main.c])


AC_CONFIG_FILES([Makefile
                 application/Makefile
                 archives/Makefile
                 include/Makefile
                 lib/Makefile
                 bootloader/Makefile
                 scripts/Makefile
                 udev/Makefile])
AC_OUTPUT
