INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO

noinst_LTLIBRARIES = libgui.la
libgui_la_LDFLAGS = $(all_libraries)
libgui_la_SOURCES = editor.cpp device_gui.cpp toplevel.cpp port_selector.cpp \
			object_view.cpp config_gen.cpp register_view.cpp device_editor.cpp watch_view.cpp \
			project.cpp project_editor.cpp project_manager.cpp hex_editor.cpp global_config.cpp \
			config_center.cpp editor_manager.cpp new_dialogs.cpp prog_config_widget.cpp \
			text_editor.cpp log_view.cpp gui_prog_manager.cpp gui_debug_manager.cpp \
			breakpoint_view.cpp likeback.cpp main_global.cpp console.cpp project_wizard.cpp \
	toplevel_ui.cpp

